--- a/threejs-miniproject/index.html
+++ b/threejs-miniproject/index.html
@@ -5,7 +5,7 @@
 		<link rel="icon" type="image/svg+xml" href="favicon.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-		<script defer type="module" src="/main.js"></script>
+		<script defer type="module" src="main.js"></script>
 
 		<title>THREE.js miniproject</title>
 	</head>
