added credits html page

--- a/threejs-miniproject/index.html
+++ b/threejs-miniproject/index.html
@@ -126,24 +126,7 @@
 		</main>
 
 		<footer>
-			<p>
-				Background photo by
-				<a
-					href="https://unsplash.com/@jeremythomasphoto?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
-					>Jeremy Thomas</a
-				>
-				on
-				<a
-					href="https://unsplash.com/s/photos/space-background?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
-					>Unsplash</a
-				>
-			</p>
-			<p>
-				Website crafted by
-				<a href="https://github.com/santeenee">Santeenee</a> following a
-				<a href="https://youtu.be/Q7AOvWpIVHU">video</a> made by
-				<a href="https://youtube.com/c/fireship">Fireship</a>
-			</p>
+			<a href="./credits.html">Credits</a>
 		</footer>
 	</body>
 </html>
